--- a/index.html
+++ b/index.html
@@ -37,7 +37,8 @@
             <div class="section_div_2">
                 <div class="section_div_3">
                     <h1>Medium length display headline</h1>
-                <p class="section_div_2_p">Separated they live in Bookmarks right at the coast of the famous Semantics, large language </p>
+                <p class="section_div_2_p">Separated they live in Bookmarks right at the coast of the famous
+                     Semantics, large language </p>
                 </div>
                 <div class="sectio_div_action">
                     <div class="section_div_action_2">
@@ -53,6 +54,40 @@
             </div>
 
         </div>
+    </section>
+
+    <!-- SECTION2 -->
+
+    <section class="section_2">
+
+        <div class="box">
+            <div class="box_div">
+                <div class="title_div_parent">
+                    <div class="title_div"></div>
+                    <p>Feature one</p>
+                </div>
+                <p class="box_div_p">All base UI elements are made using Nested Symbols
+                     and shared styles that are logically connected with one another.</p>
+                
+            </div>
+            <div class="box_div">
+                <div class="title_div_parent">
+                    <div class="title_div"></div>
+                    <p>Feature one</p>
+                </div>
+                <p class="box_div_p">All base UI elements are made using Nested Symbols
+                     and shared styles that are logically connected with one another.</p>
+            </div>
+            <div class="box_div">
+                <div class="title_div_parent">
+                    <div class="title_div"></div>
+                    <p>Feature one</p>
+                </div>
+                <p class="box_div_p">All base UI elements are made using Nested Symbols
+                     and shared styles that are logically connected with one another.</p>
+            </div>
+        </div>
+
     </section>
 
 
