--- a/index.html
+++ b/index.html
@@ -123,6 +123,43 @@
 
               </div>
             </section>
+
+            <!-- FOOTER -->
+
+            <footer>
+                <div class="footer_div">
+                   <div>
+                    <img src="photos/logo.svg" alt="">
+                   </div>
+
+                    <div class="footer_box_1">
+                    <h1>First column</h1>
+                    <p>First page</p>
+                    <p>Second page</p>
+                    <p>Third</p>
+                    <p>Fourth</p>
+                    </div>
+                    <div class="footer_box_1">
+                        <h1>First column</h1>
+                    <p>First page</p>
+                    <p>Second page</p>
+                    <p>Third</p>
+                    <p>Fourth</p>
+                    </div>
+                    <div class="footer_box_1">
+                        <h1>First column</h1>
+                    <p>First page</p>
+                    <p>Second page</p>
+                    <p>Third</p>
+                    <p>Fourth</p>
+                    </div>
+                    <div class="footer_box_2">
+                        <h1>Subscribe</h1>
+                        <p>Join our newsletter to stay up to date on features and releases</p>
+                    </div>
+                </div>
+               
+            </footer>
    
    
        
