--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     <div class="container">
         <header>
             <img src="photos/Logo (Black).svg" alt="">
+            <img class="burger_icon" src="photos/Ellipse 4.svg" alt="">
             <nav>
                 <ul>
                     <li>Link 1</li>
